flapivor/tests/m1/hopix/parser/bad/97-if-then-else-2.hopix
val main =
  if failure () then print (error_message); else 0;
  exit (EXIT_FAILURE)